  * Fixed a bug where changes to the draw distance wouldn't get
    updated if ore highlighting was turned off
  * Ore highlights can be specified in the properties file now
  * Multiplayer camera presets are now sorted by username
  * Highlight (in green) areas near torches with "E"
  * Updated texture info for Jukeboxes and Workbenches

Minecraft X-Ray 2.7 Maintenance Branch 7 (2011.01.21)

  * Key mappings are now taken from a config file which will get
    generated automatically with the defaults if not present.
  * Generate a tbz2 file for Linux/OSX folks

Minecraft X-Ray 2.7 Maintenance Branch 6 (2011.01.19)

  * Fixed a bug where wool and wood wouldn't be considered solid blocks
  * Ability to warp to any player's position with INS/DEL when loading
    multiplayer worlds
  * Minecart tracks, paintings and fences render properly now
  * Fixed a NullPointerException related to dyed wool

Minecraft X-Ray 2.7 Maintenance Branch 5 (2011.01.17)

  * Generate Windows EXE via JSmooth
  * Fixed a bug that was keeping chunk files open
  * Load chunks on-demand rather than at program start
  * X-Ray should now handle any map, regardless of size
  * Handle corrupt/invalid chunks more gracefully
  * Changed default starting memory from 128MB to 256MB
  * World selection merged in with main options dialog
  * Ability to select arbitrary directories to open worlds
  * "N" key will toggle back and forth between Nether and Overworld, if available.
  * Minimap rotated so that north points up (previously it had pointed left)
  * Added Y position to position popup
  * Added support for new Beta 1.2 Blocks
  * Added Lapis Lazuli to highlightable ore list
  * Fullscreen toggle changed to Backspace

Minecraft X-Ray 2.7 Maintenance Branch 4 (2010.12.16)

  * Camera speed can be controlled by the left and right mouse buttons,
    in addition to left and right shift.
  * "Fast" camera speed has been given another 50% speed boost